# AI-And-Robotic-Hackathoon

./: .gitignore  404.html  README.md  VERIFICATION_REPORT.md  check_qdrant.py  check_qdrant_vectors.py  docusaurus.config.js  index.html  package-lock.json  package.json  requirements-vla.txt  requirements.txt  sidebars.js  sitemap.xml  start_server.sh  test_chatbot.py  test_chatbot_specific.py  test_rag.py
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
Chatbot/: index.html
Constitution/: index.html
RAG-Chatbot-Constitution/: index.html
backend/: README.md  main.py  (+1 more)
scripts/: accessibility_utils.py  capstone_validator.py  color_utils.py  common_data_models.py  error_handling_utils.py  launch_textbook_site.sh  observability_utils.py  package.xml  privacy_compliance.py  setup_vla_environment.sh  test_vla_components.py  verify_python_compatibility.py  verify_site_locally.sh
scripts/action_interfaces/: voice_control_action.py
scripts/capstone_project/: autonomous_humanoid_system_model.py  capstone_project_model.py  capstone_system.py  execution_orchestrator.py  state_manager.py
scripts/llm_task_planning/: action_generator.py  action_sequence_model.py  command_model.py  llm_response_parser.py  llm_service.py  prompt_engineering_utils.py  ros2_interfaces.py
scripts/multi_modal/: ros2_action_interfaces.py
scripts/voice_control/: audio_input.py  preprocessing_utils.py  voice_command_model.py  voice_processor.py  voice_to_text_pipeline.py  whisper_service.py
(+317 files in other folders)
